Fix FD leak (hopefully) and cleanup temp files better (#116)
Co-authored-by: Johnathan Gilday <johnathan.gilday@pixee.ai>